[package]
name = "mic_toggle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",  # <— НУЖНО для IMMDevice::Activate (PROPVARIANT)
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
